--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="green">#0CBD00</color>
-    <color name="red">#0CBD00</color>
-    <color name="gray">#0CBD00</color>
+    <color name="green">#43BA3B</color>
+    <color name="red">#BA4141</color>
+    <color name="gray">#878787</color>
     <color name="foreground">#494850</color>
     <color name="backround">#2C2C34</color>
 </resources>
